tambah element aside

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,13 @@
 <body>
   
   <app-header></app-header>
-  <news-list></news-list>
-
+  <main>
+    <div class="main-container">
+      <news-list></news-list>
+    </div>
+    <div class="aside-container">
+      <aside-el></aside-el>
+    </div>
+  </main>
 </body>
 </html>
